2005-06-13  Bastien Nocera  <hadess@hadess.net>

	* src/app.h:
	* src/icon.c: (tray_icon_hide):
	* src/main.c: (main):
	* src/menu.c: (quit_activated):
	* src/ui.c: (ui_hide): Speed up the exit by hiding the widgets as
	soon as they're not needed anymore

2005-06-13  Bastien Nocera  <hadess@hadess.net>

	* libgsm/phonemgr-listener.c: (phonemgr_listener_emit_message),
	(phonemgr_listener_queue_message):
	* src/e-contact-entry.c: (view_contacts_added_cb), (entry_height):
	GCC4 compilation fixes

2005-06-13  Bastien Nocera  <hadess@hadess.net>

	* libgsm/.cvsignore: upd

2005-06-13  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* README:
	* libgsm/Makefile.am:
	* libgsm/glibgsmtest.c: (message), (status), (main):
	* libgsm/gsm.cc:
	* libgsm/gsm.h:
	* libgsm/main.cc:
	* libgsm/phonemgr-listener-private.h:
	* libgsm/phonemgr-listener.c:
	* libgsm/phonemgr-listener.cc:
	* libgsm/phonemgr-listener.h:
	* libgsm/phonemgr-utils.c:
	* libgsm/phonemgr-utils.h:
	* libgsm/gnokii-identify.c:
	* src/.cvsignore:
	* src/Makefile.am:
	* src/connection.c: (set_connection_device),
	(connect_phone_thread):
	* src/test-entry.c: (main):
	Remove the libgsm backend, and use gnokii now instead, this should
	allow us to have better compatibility with more phones
	(Closes: #307406)

2005-06-13  Bastien Nocera  <hadess@hadess.net>

	* configure.in:
	* src/Makefile.am:
	* src/e-contact-entry.c:
	* src/e-contact-entry.h:
	* src/e-phone-entry.c:
	* src/e-phone-entry.h:
	* src/test-entry.c:
	* src/ui.c: (set_send_sensitivity), (phone_number_changed),
	(send_message), (create_send_dialog):
	* src/update-from-egg.sh:
	* ui/phonemgr.glade:
	* ui/phonemgr.gladep:
	* ui/strings.c:

	Check for libebook in configure
	Add EContactEntry from contact-lookup-applet with script to update
	the files
	Add new EPhoneEntry widget, which checks for mobile phone numbers
	in Evolution's addressbook
	Make gnome-phone-manager use EPhoneEntry rather than a plain GtkEntry
	Remove unused files
	(Closes: #151119)
